--- a/conda_env.yml
+++ b/conda_env.yml
@@ -6,9 +6,9 @@ dependencies:
   - python=3.8
   - dvc=2.8.3
   - joblib==1.0.1
-  - notebook
+  #- notebook=6.4.4 # for nbextensions
   - jupyter=1.0.0
-  - jupyter_contrib_nbextensions==0.5.1
+  #- jupyter_contrib_nbextensions==0.7.0  # not working on win
   - matplotlib=3.4.3
   - numpy=1.21.2
   - pandas=1.3.2
