--- a/conda_env.yml
+++ b/conda_env.yml
@@ -1,21 +1,38 @@
 name: venv_DVCpipeline
 channels:
   - conda-forge
+  - pytorch
+  - nvidia
   - defaults
 dependencies:
   - python=3.8
   - dvc=2.8.3
   - joblib==1.0.1
-  #- notebook=6.4.4 # for nbextensions
   - jupyter=1.0.0
-  #- jupyter_contrib_nbextensions==0.7.0  # not working on win
-  - matplotlib=3.4.3
-  - numpy=1.21.2
   - pandas=1.3.2
   - pytest==6.2.4
   - python-box==5.4.1
   - pyyaml=5.4.1
   - scikit-learn=0.24.2
-  - scipy=1.7.1
-  - tqdm=4.62.2
+  - pip
+# Yolov5
+  - gitpython>=3.1.30
+  - matplotlib>=3.3
+  - numpy>=1.22.2
+  - opencv>=4.1.1
+  - Pillow>=7.1.2
+  - psutil  # system resources
+  - PyYAML>=5.3.1
+  - requests>=2.23.0
+  - scipy>=1.4.1
+  - tqdm>=4.64.0
+  - ultralytics>=8.0.147
+  # protobuf<=3.20.1  # https://github.com/ultralytics/yolov5/issues/8012
 
+  # PyTorch & Cuda
+  - pytorch>=1.8.0 # see https://pytorch.org/get-started/locally (recommended)
+  - torchvision>=0.9.0
+  - torchaudio
+  - pytorch-cuda=11.8
+  - pip:
+      - thop>=0.1.1  # FLOPs computation
