--- a/conda_env.yml
+++ b/conda_env.yml
@@ -15,6 +15,10 @@ dependencies:
   - pyyaml=5.4.1
   - scikit-learn=0.24.2
   - pip
+# DVC
+  - DVC
+# LabelStudio
+  -
 # Yolov5
   - gitpython>=3.1.30
   - matplotlib>=3.3
@@ -27,12 +31,13 @@ dependencies:
   - scipy>=1.4.1
   - tqdm>=4.64.0
   - ultralytics>=8.0.147
-  # protobuf<=3.20.1  # https://github.com/ultralytics/yolov5/issues/8012
+  # - protobuf<=3.20.1  # https://github.com/ultralytics/yolov5/issues/8012
 
   # PyTorch & Cuda
-  - pytorch>=1.8.0 # see https://pytorch.org/get-started/locally (recommended)
-  - torchvision>=0.9.0
-  - torchaudio
-  - pytorch-cuda=11.8
+  #- pytorch>=1.8.0 # see https://pytorch.org/get-started/locally (recommended)
+  #- torchvision>=0.9.0
+  #- torchaudio
+  #- pytorch-cuda=11.8
   - pip:
       - thop>=0.1.1  # FLOPs computation
+      - label-studio
