--- a/params.yaml
+++ b/params.yaml
@@ -1,31 +1,34 @@
 base:
-  random_state: 42
-  log_level: 'DEBUG'
+  random_state:     42
+  log_level:        'DEBUG'
 
 data_load:
-  dataset_url: 'https://file.io/ory5xt7bLL4h'                                             # download link, leave empty if no download necessary
-  dataset_raw_path: 'data/raw/'    # where to download to, and where to unzip from
-  data_is_zip: True                 # no quotes here!
+  dataset_url:        ''                              # download link, leave empty if no download necessary
+  file_name:          'Dataset_01'                    # leave empty if file is downloaded via url
+  dataset_raw_path:   'data/raw/'                     # where to download to, and where to unzip from
 
-data_extract:
-  images_path: 'data/extracted/images'
-  features_path: 'data/extracted/labels'
+data_process:
+  dataset_proc_path:  'data/processed/'               # in our case, where to unzip the data
+
+data_split:
+  images_path:      'data/extracted/images'
+  features_path:    'data/extracted/labels'
   test_size: 0.3
-  trainset_path: 'data/...'
-  testset_path: 'data/...'
+  trainset_path:    'data/...'
+  testset_path:     'data/...'
 
 
 model:
-  model_type: 'yolov5m'
-  model_config: 'config/custom_coating_5.yaml'
+  model_type:       'yolov5m'
+  model_config:     'config/custom_coating_5.yaml'
 
 train:
-  img: 128
+  img:        128
   batch-size: 64
-  epochs: 200
+  epochs:     200
 
 
 
 reports:
-  metrics_file: 'reports/metrics.json'
+  metrics_file:           'reports/metrics.json'
   confusion_matrix_image: 'reports/confusion_matrix.png'
